# h1-network-universe-data

./: .env.example  .gitignore  docker-compose.yml  pyproject.toml
docs/: file-processing-worker.md
scripts/postgres/: init.sql
scripts/postgres/migrations/: 001_create_org_files.sql  002_create_org_facilities.sql  003_create_org_providers.sql  004_add_org_providers_columns.sql  005_update_org_facilities_columns.sql
src/pipeline/: __init__.py  config.py  ingest.py  load.py  main.py  transform.py
src/pipeline/sources/county_boundaries/: ingest.py  models.py  pipeline.py  transform.py
src/pipeline/sources/hsd_reference/: ingest.py  models.py  pipeline.py  transform.py
src/pipeline/sources/hsd_tables/: __init__.py  ingest.py  models.py  pipeline.py  runner.py  transform.py  validate.py
src/pipeline/sources/org_facilities/: load.py  pipeline.py  transform.py
src/pipeline/sources/org_providers/: load.py  pipeline.py  transform.py
src/pipeline/sources/zcta_gazetteer/: ingest.py  models.py  pipeline.py  post_load.py  transform.py
src/pipeline/worker/: __main__.py  db.py  dispatch.py  main.py  models.py  s3.py
tests/: test_hsd_tables.py
tests/fixtures/: facility_hsd_mock.csv  provider_hsd_mock.csv
tests/worker/: test_dispatch.py  test_main.py  test_runner.py  test_s3.py
